# FactorII

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/modules/: Utils.cmake
assets/: fii.icns  fii.rc
src/: version.h
src/factorii/: CMakeLists.txt  build.h  build.h.in  core.h  entry.c  entry.h  options.c  options.h
src/factorii/gfx/: gl.h
src/factorii/support/: xgetopt.c
src/factorii/ui/: colors.c  colors.h  content.c  content.h  cursor.c  cursor.h  fonts.c  fonts.h  glfw.h  header.c  header.h  helpers.c  helpers.h  interface.c  interface.h  nuk.c  nukes.c  nukes.h  sidebar.c  sidebar.h
src/main/: CMakeLists.txt  main.c
tests/: CMakeLists.txt
tests/helpers/: helpers.h
